--- a/sdk/src/main/res/layout/custom_text_banner.xml
+++ b/sdk/src/main/res/layout/custom_text_banner.xml
@@ -50,7 +50,8 @@
         android:textAlignment="center"
         android:textSize="18dp"
         android:background="#ffffff"
-        android:visibility="gone"/>
+        android:visibility="gone"
+        android:gravity="center_horizontal" />
 
 
 </LinearLayout>
