--- a/sdk/src/main/res/layout/activity_video_pop_ad.xml
+++ b/sdk/src/main/res/layout/activity_video_pop_ad.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/layout"
@@ -7,34 +7,41 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#000000"
-    android:weightSum="1"
     tools:context=".Temp123Class">
 
+
     <com.google.android.exoplayer2.ui.PlayerView
-        android:layout_weight="0.1"
         android:id="@+id/player_view"
         android:layout_width="match_parent"
         app:use_controller="false"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_margin="0dp"/>
 
     <TextView
         android:id="@+id/text_view"
-        android:layout_weight="0.9"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text=""
-        android:textSize="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/text_border"
         android:paddingTop="15dp"
         android:paddingRight="5dp"
+        android:text="Ending in Aho"
         android:textColor="#97FFFFFF"
-        android:gravity="end"/>
-    <ProgressBar
-        android:id="@+id/progress_bar"
-        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="15dp"
-        android:progress="50"
-        android:background="@drawable/custom_progress" />
+        android:textSize="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="10dp"
+        android:padding="10dp"/>
+<!--    <ProgressBar-->
+<!--        android:id="@+id/progress_bar"-->
+<!--        style="@style/Widget.AppCompat.ProgressBar.Horizontal"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="15dp"-->
+<!--        android:progress="50"-->
+<!--        android:background="@drawable/custom_progress" />-->
 
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
